testsuite/poke.pkl/struct-types-endian-diag-1.pk
/* { dg-do compile } */

type Packet = struct
 {
   big string foo; /* { dg-error "" } */
   long bar;
 };
